# signfinder-api

./: .env.example  .env.prod.example  .env.test.example  .gitignore  Dockerfile  README.md  alembic.ini  cloudbuild-prod.yaml  cloudbuild-test.yaml  pyproject.toml  test_async.ps1
.github/workflows/: ci.yml  deploy-prod.yml  deploy-test.yml
_archive/: cloudbuild.yaml.legacy
alembic/: env.py
alembic/versions/: 001_init.py  002_signature_bytea.py  003_deals.py
app/: auth.py  db.py  dependencies.py  job_processors.py  job_storage.py  main.py  sandbox.py  tasks.py  tenant_storage.py
app/models/: analysis.py  common.py  deal.py  jobs.py  parties.py  settings.py  signers.py  templates.py
app/resources/: default_profile.json
app/routers/: agent.py  audit.py  corpus.py  deals.py  internal.py  jobs.py  llm_config.py  me.py  parties.py  pipeline.py  settings.py  signature_process.py  signers.py  system.py  templates.py
app/utils/: share_token.py
migrations/: 001_init.sql  002_signature_bytea.sql  apply.ps1  post_sql_setup.ps1
monitoring/: add_landing_uptime.py  send_test_alert.py  setup_monitoring.py
monitoring/alert_to_telegram/: main.py
tests/: conftest.py  test_auth.py  test_deals_crud.py  test_idor.py  test_party.py  test_profile.py  test_signature.py  test_usage.py
