[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signfinder-api"
version = "1.9.0"
description = "FastAPI REST API for SignFinder core engine"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "pydantic>=2.5",
    # Cabinet auth + DB:
    "firebase-admin>=6.5",
    "asyncpg>=0.29",
    # signfinder-core:
    # DEV:        pip install -e ../signfinder-core/
    # PRODUCTION: see Dockerfile — installs from GitHub
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
