[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signfinder-api"
version = "1.19.0"
description = "FastAPI REST API for SignFinder core engine"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "pydantic>=2.5",
    # Cabinet auth + DB:
    "firebase-admin>=6.5",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "sqlalchemy[asyncio]>=2.0",
    # Deal Cycle (v2.0.0, E1): share_token generator
    "nanoid>=2.0",
    # DOC/DOCX → PDF conversion (Fix-1.2):
    "mammoth>=1.6",
    "weasyprint>=62",
    # signfinder-core:
    # DEV:        pip install -e ../signfinder-core/
    # PRODUCTION: see Dockerfile — installs from GitHub
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=short -v --junit-xml=test-results/results.xml"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
